--- a/js/charts.css
+++ b/js/charts.css
@@ -8,10 +8,16 @@
 }
 
 .bar_chart text{
-	fill: white;
-	font: 10px sans-serif;
+	fill: grey;
+	font: 20px sans-serif;
 	text-anchor: end;
 }
+
+.bar_chart path { 
+  fill: none; 
+  stroke: black; 
+  stroke-width; 1; 
+} 
 
 /* pie_chart */
 .pie_chart .slice text {
@@ -23,4 +29,4 @@
 	fill: blue;
 }
 
-
+/* complex bar chart */
